--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
        <section class="featured-box" id="home">
           <div class="featured-text">
             <div class="featured-text-card">
-                <!-- <span>Gilar Wahiditya Ekaputra</span> -->
+                <span>Gilar Wahiditya Ekaputra</span>
             </div>
             <div class="featured-name">
-                <p>I'm <span class="typedText">Gilar Wahiditya</span></p>
+                <p>I'm <span class="typedText"></span></p>
             </div>
             <div class="featured-text-info">
                 <p>Graduated from a Vocational High School majoring in software engineering who has high enthusiasm in information technology and data management. Have field work experience in the IT field, understand programming concepts and data management. I am an individual who has a passion for learning and developing in the field of IT and data management.
