change icon and edit tipis tipis

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 
     <!-- --------- UNICONS ---------- -->
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.8/css/line.css">
-
+    <!-- ICON -->
+     <link rel="icon" href="Assets/Images/LogoGilar.svg">
     <!-- --------- CSS ---------- -->
     <link rel="stylesheet" href="Assets/App.css">
 
@@ -18,7 +19,7 @@
     <!-- --------------- HEADER --------------- -->
       <nav id="header">
         <div class="nav-logo">
-            <p class="nav-name">Portofolio.</p>
+            <p class="nav-name"><img src="Assets/Images/LogoGilar.svg" alt="fdf"></p>
         </div>
         <div class="nav-menu" id="myNavMenu">
             <ul class="nav_menu_list">
@@ -35,7 +36,7 @@
                     <div class="circle"></div>
                 </li>
                 <li class="nav_list">
-                    <a href="#contact" class="nav-link">Contact</a>
+                    <a href="#contact" class="nav-link">Experience</a>
                     <div class="circle"></div>
                 </li>
             </ul>
@@ -59,7 +60,7 @@
                 <p>I'm <span class="typedText"></span></p>
             </div>
             <div class="featured-text-info">
-                <p>Graduated from a Vocational High School majoring in software engineering who has high enthusiasm in information technology and data management. Have field work experience in the IT field, understand programming concepts and data management. I am an individual who has a passion for learning and developing in the field of IT and data management.
+                <p>Graduated from a Vocational High School in the Software Engineering department with a strong interest in information technology and data management. Possesses field work experience in IT and Graphic Design, understands programming concepts and data management, as well as basic Graphic Design principles. I am an individual with a passion for learning and growing in the fields of IT, data management, and Graphic Design.
                 </p>
             </div>
             <div class="featured-text-btn">
@@ -94,7 +95,7 @@
                 <div class="about-info">
                     <h3>My introduction</h3>
                     <p>
-                        My name is Gilar Wahiditya, a graduate of the Software Engineering Vocational School. I have 1 year of work experience in the position of Administrative Staff. My current position is Administrative Staff and Video Grapher at Bagja College, a tutoring institution located in Cirebon. My future plans are to have a career as an admin in a technology start-up company.
+                        My name is Gilar Wahiditya Eka Putra, and you can call me Gilar. I have one year of work experience in the position of Administrative Staff. My current role is Administrative Staff and Videographer at Bagja College, a tutoring institution located in Cirebon. My future plan is to build a career as an admin in a technology start-up company.
                     </p>
                     <div class="about-btn">
                         <a href="Assets/Cv/GilarWahiditya_CV.pdf" download></a>
@@ -131,9 +132,43 @@
           </div>
        </section>
 
+       <!-- EXPERIENCE -->
+       <section class="section" id="contact">
+        <div class="top-header">
+          <h1>Experience</h1>
+        </div>
+        <div class="row">
+           <div class="col">
+              <div class="contact-info experience">
+                  <h2> <i class="uil uil-building experience-icon"></i>F NOTEBOOK -
+                    COMPUTER TECHNICIAN</h2>
+                  <p><i class="uil uil-navigator"></i> 
+                    Melakukan pengecekan dan Memastikan komputer dan laptop yang digunakan dapat berfungsi dengan baik  
+                  </p>
+                  <p><i class="uil uil-navigator"></i> Melakukan pengecekan terhadap software maupun hardware yang di perlukan agar berjalan dengan baik
+                </p>
+                <p><i class="uil uil-navigator"></i> Membuat data ketersediaan laptop menggunakan ms Excel </p>
+              </div>
+           </div>
+           <div class="col">
+            <div class="contact-info experience">
+                <h2> <i class="uil uil-building experience-icon"></i>BAGJA COLLEGE -
+                  STAF ADMINISTRASI & VIDEO GRAPHER</h2>
+                <p><i class="uil uil-navigator"></i> Menginput setiap pemasukan dan pengeluaran perusahaan   </p>
+                <p><i class="uil uil-navigator"></i> Merekap pemasukan dan pengeluaran bulanan perusahaan </p>
+                <p><i class="uil uil-navigator"></i> Merekap absensi karyawan serta siswa di setiap bulannya</p>
+                <p><i class="uil uil-navigator"></i> Membuat video serta edit video setiap diadakannya event oleh perusahaan  </p>
+                <p><i class="uil uil-navigator"></i> Membuat design yang menarik untuk di posting di media sosial perusahaan  </p>
+                <p><i class="uil uil-navigator"></i> Membalas E-Mail/WhatsApp yang masuk ke kotak masuk perusahaan  </p>
+
+            </div>
+         </div>
+        </div>
+     </section>
+
        <!-- -------------- CONTACT BOX ---------------- -->
 
-       <section class="section" id="contact">
+       <!-- <section class="section" id="contact">
           <div class="top-header">
             <h1>Get in touch</h1>
           </div>
@@ -163,7 +198,7 @@
                 </form>
              </div>
           </div>
-       </section>
+       </section> -->
 
     </main>
 
