--- a/index.html
+++ b/index.html
@@ -205,9 +205,7 @@
 
     <!-- --------------- FOOTER --------------- -->
     <footer>
-        <div class="top-footer">
-            <p>Gilar Wahiditya Ekaputra</p>
-        </div>
+        
         <div class="middle-footer">
             <ul class="footer-menu">
                 <li class="footer_menu_list">
@@ -217,7 +215,7 @@
                     <a href="#about">About</a>
                 </li>
                 <li class="footer_menu_list">
-                    <a href="#projects">Projects</a>
+                    <a href="#projects">Experience</a>
                 </li>
                 <li class="footer_menu_list">
                     <a href="#contact">Contact</a>
