--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <p>I'm <span class="typedText"></span></p>
             </div>
             <div class="featured-text-info">
-                <p>Graduated from a Vocational High School in the Software Engineering department with a strong interest in information technology and data management. Possesses field work experience in IT and Graphic Design, understands programming concepts and data management, as well as basic Graphic Design principles. I am an individual with a passion for learning and growing in the fields of IT, data management, and Graphic Design.
+                <p>My name is <b>Gilar Wahiditya Ekaputra</b>, with one year of experience at a tutoring institution, specializing in multidisciplinary skills including administration, graphic design, and video production. Proficient in managing administrative systems, creating visually compelling content, and supporting institutional promotion through multimedia. Possesses a strong blend of organizational, technical, and design aesthetics to enhance company efficiency and branding.
                 </p>
             </div>
             <div class="featured-text-btn">
@@ -95,13 +95,10 @@
                 <div class="about-info">
                     <h3>My introduction</h3>
                     <p>
-                        My name is Gilar Wahiditya Eka Putra, and you can call me Gilar. I have one year of work experience in the position of Administrative Staff. My current role is Administrative Staff and Videographer at Bagja College, a tutoring institution located in Cirebon. My future plan is to build a career as an admin in a technology start-up company.
+                        My name is <b>Gilar Wahiditya Ekaputra</b>, a young professional with one year of experience in the education sector, particularly in tutoring institutions, where I have honed multidisciplinary expertise spanning administration, graphic design, and video production. With meticulous attention to detail and advanced skills, I excel at managing administrative systems efficiently, designing creative and captivating visual content, and contributing to institutional promotion through diverse media.
+
+                        I believe that my unique blend of organizational proficiency, technical mastery, and design aesthetics not only enhances operational efficiency but also strengthens corporate identity and branding with a professional and innovative touch. My dedication to quality and detail forms the foundation of every project I undertake, always striving to deliver added value to the growth of the institutions I serve.
                     </p>
-                    <div class="about-btn">
-                        <a href="Assets/Cv/GilarWahiditya_CV.pdf" download></a>
-                            <button class="btn">Download CV <i class="uil uil-import"></i></button>
-                        </a>
-                    </div>
                 </div>
         
             
@@ -129,6 +126,11 @@
                 <h3>ToDo App</h3>           
                 <a href="https://todo-app-lar.vercel.app/" target="_blank">LIVE DEMO</a>
             </div>
+            <div class="project-box">
+                <img src="Assets/Images/logoBC.png" alt=""> 
+                <h3>Company Website</h3>           
+                <a href="https://bagjacollege.com" target="_blank">LIVE DEMO</a>
+            </div>
           </div>
        </section>
 
@@ -139,28 +141,23 @@
         </div>
         <div class="row">
            <div class="col">
-              <div class="contact-info experience">
-                  <h2> <i class="uil uil-building experience-icon"></i>F NOTEBOOK -
-                    COMPUTER TECHNICIAN</h2>
-                  <p><i class="uil uil-navigator"></i> 
-                    Melakukan pengecekan dan Memastikan komputer dan laptop yang digunakan dapat berfungsi dengan baik  
-                  </p>
-                  <p><i class="uil uil-navigator"></i> Melakukan pengecekan terhadap software maupun hardware yang di perlukan agar berjalan dengan baik
-                </p>
-                <p><i class="uil uil-navigator"></i> Membuat data ketersediaan laptop menggunakan ms Excel </p>
-              </div>
-           </div>
+            <div class="contact-info experience">
+                <h2><img src="Assets/Images/logoBC.png" alt="">Admin - BAGJA COLLEGE 
+                  </h2>
+                <p><i class="uil uil-navigator"></i> Ensured smooth daily administrative operations, including document filing, student database management, and generating attendance reports and learning progress reports for tutoring participants.  </p>
+                <p><i class="uil uil-navigator"></i> Provided comprehensive information about tutoring programs to prospective students and parents, and handled structured yet friendly registration processes. </p>
+                <p><i class="uil uil-navigator"></i> Recorded financial transactions, managed student tuition payments, and ensured payment documentation was complete for corporate financial reporting.</p>
+                <p><i class="uil uil-navigator"></i> Utilized administrative software (e.g., Excel, Google Sheets) to enhance efficiency in managing student data, schedules, and learning equipment inventory.  </p>
+            </div>
+         </div>
            <div class="col">
             <div class="contact-info experience">
-                <h2> <i class="uil uil-building experience-icon"></i>BAGJA COLLEGE -
-                  STAF ADMINISTRASI & VIDEO GRAPHER</h2>
-                <p><i class="uil uil-navigator"></i> Menginput setiap pemasukan dan pengeluaran perusahaan   </p>
-                <p><i class="uil uil-navigator"></i> Merekap pemasukan dan pengeluaran bulanan perusahaan </p>
-                <p><i class="uil uil-navigator"></i> Merekap absensi karyawan serta siswa di setiap bulannya</p>
-                <p><i class="uil uil-navigator"></i> Membuat video serta edit video setiap diadakannya event oleh perusahaan  </p>
-                <p><i class="uil uil-navigator"></i> Membuat design yang menarik untuk di posting di media sosial perusahaan  </p>
-                <p><i class="uil uil-navigator"></i> Membalas E-Mail/WhatsApp yang masuk ke kotak masuk perusahaan  </p>
-
+                <h2><img src="Assets/Images/logoBC.png" alt="">Video Grapher & Graphic Designer - BAGJA COLLEGE 
+                  </h2>
+                <p><i class="uil uil-navigator"></i> Designed marketing materials (posters, brochures, Instagram feeds) and educational/promotional videos to enhance tutoring center branding - from concept development to final execution </p>
+                <p><i class="uil uil-navigator"></i>Developed visual content strategies (photos, videos, infographics) for company social media platforms to attract prospective students and maintain parent engagement </p>
+                <p><i class="uil uil-navigator"></i> Covered corporate events and transformed raw footage into high-quality videos with professional effects, audio mixing, and informative subtitles</p>
+                <p><i class="uil uil-navigator"></i> Collaborated with cross-functional teams to develop promotional materials aligned with market needs while maintaining consistent visual identity standards</p>
             </div>
          </div>
         </div>
