--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="Assets/App.css">
 
 
-    <title>Portfolio | Gilar Wahiditya</title>
+    <title>Portfolio | Gilar Wahidityaaaaa</title>
 </head>
 <body>
    <div class="container">
