--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="Assets/App.css">
 
 
-    <title>Portfolio | Gilar Wahidityaaaaa</title>
+    <title>Portfolio | Gilar Wahiditya</title>
 </head>
 <body>
    <div class="container">
@@ -24,7 +24,7 @@
         <div class="nav-menu" id="myNavMenu">
             <ul class="nav_menu_list">
                 <li class="nav_list">
-                    <a href="#home" class="nav-link active-link">Home</a>
+                    <a href="#home" class="nav-link active-link">Homes</a>
                     <div class="circle"></div>
                 </li>
                 <li class="nav_list">
