Big Update by Me

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="nav-menu" id="myNavMenu">
             <ul class="nav_menu_list">
                 <li class="nav_list">
-                    <a href="#home" class="nav-link active-link">Homes</a>
+                    <a href="#home" class="nav-link active-link">Home</a>
                     <div class="circle"></div>
                 </li>
                 <li class="nav_list">
@@ -53,14 +53,12 @@
        <!-- -------------- FEATURED BOX ---------------- -->
        <section class="featured-box" id="home">
           <div class="featured-text">
-            <div class="featured-text-card">
-                <span>Gilar Wahiditya Ekaputra</span>
-            </div>
+
             <div class="featured-name">
                 <p>I'm <span class="typedText"></span></p>
             </div>
             <div class="featured-text-info">
-                <p>My name is <b>Gilar Wahiditya Ekaputra</b>, with one year of experience at a tutoring institution, specializing in multidisciplinary skills including administration, graphic design, and video production. Proficient in managing administrative systems, creating visually compelling content, and supporting institutional promotion through multimedia. Possesses a strong blend of organizational, technical, and design aesthetics to enhance company efficiency and branding.
+                <p>My name is <b>Gilar Wahiditya Eka Putra</b>, with one year of experience at a tutoring institution, specializing in multidisciplinary skills including administration, graphic design, and video production. Proficient in managing administrative systems, creating visually compelling content, and supporting institutional promotion through multimedia. Possesses a strong blend of organizational, technical, and design aesthetics to enhance company efficiency and branding.
                 </p>
             </div>
             <div class="featured-text-btn">
@@ -108,26 +106,26 @@
 
        <section class="section" id="projects">
           <div class="top-header">
-              <h1>Projects</h1>
+              <h1>Website Projects</h1>
           </div>
           <div class="project-container">
             <div class="project-box">
-                <i class="uil uil-calculator"></i>
+                <iframe src="https://calculator-lar.vercel.app/" frameborder="0"></iframe>
                 <h3>Calculator App</h3>           
                 <a href="https://calculator-lar.vercel.app/" target="_blank">LIVE DEMO</a>
             </div>
             <div class="project-box">
-                <i class="uil uil-film"></i>
+                <iframe src="https://lar-movies.vercel.app/" frameborder="0"></iframe>
                 <h3>Movie App</h3>           
                 <a href="https://lar-movies.vercel.app/" target="_blank">LIVE DEMO</a>
             </div>
             <div class="project-box">
-                <i class="uil uil-clipboard-notes"></i>
+                <iframe src="https://todo-app-lar.vercel.app/" frameborder="0"></iframe>
                 <h3>ToDo App</h3>           
                 <a href="https://todo-app-lar.vercel.app/" target="_blank">LIVE DEMO</a>
             </div>
             <div class="project-box">
-                <img src="Assets/Images/logoBC.png" alt=""> 
+                <iframe src="https://bagjacollege.com" frameborder="0"></iframe>
                 <h3>Company Website</h3>           
                 <a href="https://bagjacollege.com" target="_blank">LIVE DEMO</a>
             </div>
@@ -142,8 +140,8 @@
         <div class="row">
            <div class="col">
             <div class="contact-info experience">
-                <h2><img src="Assets/Images/logoBC.png" alt="">Admin - BAGJA COLLEGE 
-                  </h2>
+                <h2>Administration Staff - BAGJA COLLEGE</h2>
+                <i class="text-muted">Mei 2024 - Juni 2025</i>
                 <p><i class="uil uil-navigator"></i> Ensured smooth daily administrative operations, including document filing, student database management, and generating attendance reports and learning progress reports for tutoring participants.  </p>
                 <p><i class="uil uil-navigator"></i> Provided comprehensive information about tutoring programs to prospective students and parents, and handled structured yet friendly registration processes. </p>
                 <p><i class="uil uil-navigator"></i> Recorded financial transactions, managed student tuition payments, and ensured payment documentation was complete for corporate financial reporting.</p>
@@ -152,8 +150,8 @@
          </div>
            <div class="col">
             <div class="contact-info experience">
-                <h2><img src="Assets/Images/logoBC.png" alt="">Video Grapher & Graphic Designer - BAGJA COLLEGE 
-                  </h2>
+                <h2>Video Grapher & Graphic Designer - BAGJA COLLEGE  </h2><i class="text-muted">Mei 2024 - Juni 2025</i>
+                
                 <p><i class="uil uil-navigator"></i> Designed marketing materials (posters, brochures, Instagram feeds) and educational/promotional videos to enhance tutoring center branding - from concept development to final execution </p>
                 <p><i class="uil uil-navigator"></i>Developed visual content strategies (photos, videos, infographics) for company social media platforms to attract prospective students and maintain parent engagement </p>
                 <p><i class="uil uil-navigator"></i> Covered corporate events and transformed raw footage into high-quality videos with professional effects, audio mixing, and informative subtitles</p>
@@ -165,7 +163,7 @@
 
        <!-- -------------- CONTACT BOX ---------------- -->
 
-       <!-- <section class="section" id="contact">
+       <section class="section" id="contact">
           <div class="top-header">
             <h1>Get in touch</h1>
           </div>
@@ -173,11 +171,23 @@
              <div class="col">
                 <div class="contact-info">
                     <h2>Find Me <i class="uil uil-corner-right-down"></i></h2>
-                    <a href="mailto:wahidityagilar6@email.com"><p><i class="uil uil-envelope"></i> wahidityagilar6@gmail.com</p></a>
-                    <a href="https://wa.me/085174388765?text=Haiii%20Gilar" target="_blank"><p><i class="uil uil-whatsapp"></i> 0851-7438-8765</p></a>
-                    <a href="https://www.instagram.com/gilarwdy/" target="_blank"><p><i class="uil uil-instagram"></i> Gilar Wahiditya</p></a>
-                    <a href="https://github.com/LarzzCode" target="_blank"><p><i class="uil uil-github-alt"></i> Gilar Wahiditya</p></a>
-                    <a href="https://www.linkedin.com/in/gilarwdy/" target="_blank"><p><i class="uil uil-linkedin-alt"></i> Gilar Wahiditya</p></a>
+                    <div class="item-contact">
+                        <a href="mailto:wahidityagilar6@email.com"><p><i class="uil uil-envelope"></i> wahidityagilar6@gmail.com</p></a>
+                    </div>
+                    <div class="item-contact">
+                        <a href="https://wa.me/085174388765?text=Haiii%20Gilar" target="_blank"><p><i class="uil uil-whatsapp"></i> 0851-7438-8765</p></a>
+                    </div>
+                    <div class="item-contact">
+                        <a href="https://www.instagram.com/gilarwdy/" target="_blank"><p><i class="uil uil-instagram"></i> Gilar Wahiditya</p></a>
+                    </div>
+                    <div class="item-contact">
+
+                        <a href="https://github.com/LarzzCode" target="_blank"><p><i class="uil uil-github-alt"></i> Gilar Wahiditya</p></a>
+                    </div>
+                    <div class="item-contact">
+
+                        <a href="https://www.linkedin.com/in/gilarwdy/" target="_blank"><p><i class="uil uil-linkedin-alt"></i> Gilar Wahiditya</p></a>
+                    </div>
                 </div>
              </div>
              <div class="col">
@@ -195,7 +205,7 @@
                 </form>
              </div>
           </div>
-       </section> -->
+       </section>
 
     </main>
 
@@ -230,6 +240,8 @@
     </footer>
     </div>
 
+    <!-- EMAIL JS -->
+      <script src="https://smtpjs.com/v3/smtp.js"></script>
     <!-- ----- TYPING JS Link ----- -->
     <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
     <!-- ----- SCROLL REVEAL JS Link----- -->
