Added Desain Portofolio

--- a/index.html
+++ b/index.html
@@ -36,7 +36,11 @@
                     <div class="circle"></div>
                 </li>
                 <li class="nav_list">
-                    <a href="#contact" class="nav-link">Experience</a>
+                    <a href="#experience" class="nav-link">Experience</a>
+                    <div class="circle"></div>
+                </li>
+                <li class="nav_list">
+                    <a href="#contact" class="nav-link">Contact</a>
                     <div class="circle"></div>
                 </li>
             </ul>
@@ -129,11 +133,16 @@
                 <h3>Company Website</h3>           
                 <a href="https://bagjacollege.com" target="_blank">LIVE DEMO</a>
             </div>
+            <div class="project-box">
+                <iframe src="Assets/App.html" frameborder="0"></iframe>
+                <h3>Portofolio Desain</h3>           
+                <a href="Assets/App.html" target="_blank">LIVE DEMO</a>
+            </div>
           </div>
        </section>
 
        <!-- EXPERIENCE -->
-       <section class="section" id="contact">
+       <section class="section" id="experience">
         <div class="top-header">
           <h1>Experience</h1>
         </div>
